--- a/src/_scss/_typography.scss
+++ b/src/_scss/_typography.scss
@@ -34,6 +34,7 @@ h6 {
 h1 {
   color: $g0;
   font-family: $altFont;
+  font-style: italic;
   text-transform: lowercase;
   text-shadow: text-outline($g8);
   font-size: calc(11vmin + 5px);
@@ -43,6 +44,7 @@ h1 {
   margin-left: -0.07em;
 
   em {
+    font-style: normal;
     font-family: $textFont;
     color: $g8;
     letter-spacing: -0.07em;
@@ -82,6 +84,7 @@ p {
 
 blockquote {
   font-family: $altFont;
+  font-style: italic;
   border-radius: 0 $borderRadius $borderRadius 0;
   border-left: $borderWidth * 2 $borderStyle var(--secondary);
   background: var(--g7);
@@ -97,8 +100,8 @@ blockquote {
 }
 
 em {
-  font-style: normal;
   font-family: $altFont;
+  font-style: italic;
 }
 
 strong {
