--- a/src/_scss/_vars.scss
+++ b/src/_scss/_vars.scss
@@ -42,7 +42,8 @@ $fallback: showFallback 5s forwards;
 
 @font-face {
   font-family: "Fraunces Italic";
-  src: url("/_assets/fonts/Fraunces-Italic.woff2") format("woff2-variations");
+  src: url("/_assets/fonts/Fraunces-Italic--latin_basic.woff2") format("woff2-variations");
+  font-variation-settings: "opsz" "72pt", "wght", 700, "SOFT", 0, "WONK", 1;
   font-weight: 100 900;
   font-style: italic;
   font-display: block;
@@ -50,4 +51,4 @@ $fallback: showFallback 5s forwards;
 
 $fallbackFonts: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Nueue", "Roboto", sans-serif;
 $textFont: "Space Grotesk", $fallbackFonts;
-$altFont: "Fraunces Italic", $fallbackFonts;
+$altFont: "Fraunces Italic", "Times", $fallbackFonts;
